# anchor

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  cliff.toml  deny.toml  release-plz.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: boundary-check.yml  ci.yml  frontmatter-schema-check.yml
docs/: COMMAND-REFERENCE.md  EXIT-CODES.md  IGNORE.md  LIMITATIONS.md  PLAN-WORKFLOW.md  QUICK-START.md  REFERENCE-HEALTH.md  REWRITES.md  TYPICAL-SESSION.md
src/: lib.rs  main.rs  refs.rs
src/apply/: mod.rs  post_apply_scan.rs
src/cli/: apply.rs  diff.rs  init.rs  mod.rs  recover.rs  root.rs  serve.rs
src/cli/file/: mod.rs  mv.rs  refs.rs  validate.rs
src/cli/frontmatter/: add_required.rs  audit.rs  check_schema.rs  inference.rs  migrate.rs  mod.rs  normalize.rs  parser.rs  schema.rs
src/cli/plan/: list.rs  mod.rs  new.rs  templates.rs  validate.rs
src/core/: acked.rs  context_scope.rs  diagnostics.rs  fence_state.rs  mod.rs  parser.rs  resolver.rs  rewriter.rs  scanner.rs  suggest.rs  transaction.rs  validator.rs
src/core/reference/: toml.rs  yaml.rs
src/infra/: atomic.rs  lock.rs  mod.rs  temp.rs  workspace.rs
src/model/: config.rs  manifest.rs  mod.rs  plan.rs  reference.rs  rewrite.rs
src/server/: mod.rs
templates/: archive.toml  batch-move.toml  categorize.toml  rename.toml  scaffold.toml
tests/: anchor_engine_integration.rs  apply_rollback_diagnostics.rs  frontmatter_fm_scenarios.rs  frontmatter_pass2_replay.rs  integration_mv.rs  integration_validate_refs.rs  plan_integration.rs  post_apply_partial_path.rs  scanner_context_scope.rs  scanner_fenced_block.rs
tests/fixtures/: FRONTMATTER.schema.json
