[package]
name = "accelmars-mind"
version = "0.1.0"
edition = "2021"
description = "Reference-safe file operations for Markdown workspaces"
license = "Apache-2.0"
repository = "https://github.com/accelmars/mind-engine"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
relative-path = "1"
path-clean = "1"

[dev-dependencies]
tempfile = "3"
