[package]
name = "accelmars-mind"
version = "0.1.0"
edition = "2021"
description = "Reference-safe file operations for Markdown workspaces"
license = "Apache-2.0"
repository = "https://github.com/accelmars/mind-engine"

[lib]
name = "accelmars_mind"
path = "src/lib.rs"

[[bin]]
name = "mind"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
ignore = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
relative-path = "1"
path-clean = "1"
nix = { version = "0.29", default-features = false, features = ["signal"] }

[dev-dependencies]
tempfile = "3"
