[package]
name = "accelmars-anchor"
version = "0.7.1"
edition = "2021"
description = "Reference-safe file operations for Markdown workspaces"
license = "Apache-2.0"
repository = "https://github.com/accelmars/anchor"

[lib]
name = "accelmars_anchor"
path = "src/lib.rs"

[[bin]]
name = "anchor"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
ignore = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
relative-path = "1"
path-clean = "1"
serde_yaml = "0.9"
toml = "0.8"
axum = "0.8"
tokio = { version = "1", features = ["rt", "macros", "net", "signal"] }
tower-http = { version = "0.6", features = ["cors"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["signal"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"

[profile.dist]
inherits = "release"
lto = "thin"
